form field spacing fixed a bit

--- a/app/assets/stylesheets/moj/_shame.scss
+++ b/app/assets/stylesheets/moj/_shame.scss
@@ -366,12 +366,6 @@ form {
 }
 
 .controller-claims {
-  fieldset {
-    border-bottom: 0;
-    .form-group.inline{
-      margin-bottom: 0;
-    }
-  }
   .judicial-apportionment-notice{
     margin-top: $gutter-half;
     margin-bottom: $gutter-half;
@@ -575,9 +569,6 @@ form {
 .search-form {
   legend{
     @include visually-hidden;
-  }
-  .form-group {
-    margin-bottom:$gutter-half;
   }
   label {
     margin-top:0;
@@ -808,9 +799,6 @@ Styling for Claims Messaging
   .message-controls {
     padding: $gutter-half;
     border-top: 1px solid $border-colour;
-    .form-group.inline {
-      margin-bottom: 0.5em;
-    }
 
     .upload-column {
       // @include grid-column( 1/7 );
